# rocket_todo

./: .gitignore
actix_server/: .env.example  Cargo.toml
actix_server/controllers/todo/: Cargo.toml
actix_server/controllers/todo/src/: lib.rs
actix_server/db/: Cargo.toml
actix_server/db/src/: lib.rs
actix_server/models/todo/src/: lib.rs
actix_server/src/: main.rs
actix_server/utils/errors/: Cargo.toml
actix_server/utils/types/: Cargo.toml
rocket-backend/: .env.example  Cargo.toml
rocket-backend/controllers/todo/: Cargo.toml
rocket-backend/controllers/todo/src/: lib.rs
rocket-backend/db/: Cargo.toml
rocket-backend/db/src/: lib.rs
rocket-backend/models/todo/: Cargo.toml
rocket-backend/src/: main.rs
rocket-backend/utils/errors/src/: lib.rs
rocket-backend/utils/types/: Cargo.toml
rocket-backend/utils/types/src/: lib.rs
rocket-client/: index.html  package-lock.json  package.json
rocket-client/src/: App.tsx  main.tsx
rocket-client/src/components/: AddButton.tsx  Todo.tsx  TodosContainer.tsx
rocket-client/src/components/Popup/: DeletePopup.tsx  TodoForm.tsx
rocket-client/src/components/checkbox/: CheckBox.tsx
rocket-client/src/hooks/: useAddPopup.ts  useTodo.ts
rocket-client/src/utils/: cn.ts  types.ts
rocket-server/controllers/todo/: Cargo.toml
rocket-server/controllers/todo/src/: lib.rs
rocket-server/mongo/: Cargo.toml
rocket-server/src/: main.rs
rocket-server/types/: Cargo.toml
rocket_client/: package-lock.json  package.json
rocket_client/src/: App.tsx  index.css  main.tsx
rocket_client/src/components/: Todo.tsx  TodosContainer.tsx
rocket_client/src/components/Popup/: TodoForm.tsx
rocket_client/src/hooks/: useTodo.ts
rocket_client/src/utils/: fetcher.ts
rocket_server/: Cargo.toml
rocket_server/controllers/todo/: Cargo.toml
rocket_server/controllers/todo/src/: lib.rs
rocket_server/mongo/: Cargo.toml
rocket_server/mongo/src/: lib.rs
rocket_server/src/: cors.rs  main.rs
rocket_server/types/: Cargo.toml
rocket_server/types/src/: lib.rs
