workspace = { members = [
    "controllers/todo",
    "db",
    "models/todo",
    "utils/errors",
    "utils/types",
] }
[package]
name = "rocket-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
shuttle-actix-web = "0.43.0"
shuttle-runtime = "0.43.0"
tokio = "1.26.0"
actix-cors = "0.7.0"
async-trait = "0.1.78"
derive_more = "0.99.17"
json = "0.12.4"
serde = { version = "1.0.197", features = ["derive"] }
validator = { version = "0.18.1", features = ["derive"] }
wither = { version = "0.9.0", features = [
    "async-std-runtime",
], default-features = false }

db = { path = "./db" }
todo_controllers = { path = "./controllers/todo" }
todo_model = { path = "./models/todo" }
utils_types = { path = "./utils/types" }
utils_errors = { path = "./utils/errors" }
