workspace = { members = ["controllers/todo", "mongo", "types"] }
[package]
name = "rocket_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5"
rocket_cors = "0.6.0"
wither = { version = "0.9.0", features = [
    "async-std-runtime",
], default-features = false }
dotenv_codegen = "0.15.0"

todo = { path = "./controllers/todo" }
types = { path = "./types" }
mongo = { path = "./mongo" }
