[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
wither = { version = "0.9.0", features = [
    "async-std-runtime",
], default-features = false }
# dotenvy = "0.15.7"