[package]
name = "types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5"
serde = "1.0.197"
wither = { version = "0.9.0" , features = ["async-std-runtime"], default-features = false}

[features]
# default-features = false