[package]
name = "todo_controllers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.5.1" }
async-trait = "0.1.78"
derive_more = "0.99.17"
json = "0.12.4"
serde = { version = "1.0.197", features = ["derive"] }
validator = { version = "0.18.1", features = ["derive"] }
wither = { version = "0.9.0", features = [
    "async-std-runtime",
], default-features = false }
futures = "0.3"

db = { path = "../../db" }
todo_model = { path = "../../models/todo" }
utils_types = { path = "../../utils/types" }
utils_errors = { path = "../../utils/errors" }
