[package]
name = "todo_model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
validator = { version = "0.18.1", features = ["derive"] }
wither = { version = "0.9.0", features = [
    "async-std-runtime",
], default-features = false }
