[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5", features = ["json"] }
wither = { version = "0.9.0" , features = ["async-std-runtime"], default-features = false}
# serde = "*"

types = { path = "../../types" }
mongo = { path = "../../mongo" }
