[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5", features = ["json"]}
mongodb = "2.8.1"

types = { path = "../../types" }
mongo = {path = "../../mongo"}